--- a/haskell-lispy.cabal
+++ b/haskell-lispy.cabal
@@ -1,13 +1,13 @@
 name:                haskell-lispy
 version:             0.1.0.0
-synopsis:            Initial project template from stack
+synopsis:            A simple Lisp interpreter
 description:         Please see README.md
-homepage:            https://github.com/githubuser/haskell-lispy#readme
+homepage:            https://github.com/rydgel/haskell-lispy#readme
 license:             BSD3
 license-file:        LICENSE
-author:              Author name here
-maintainer:          example@example.com
-copyright:           2016 Author name here
+author:              Jérôme Mahuet
+maintainer:          jerome.mahuet@gmail.com
+copyright:           2017 Jérôme Mahuet
 category:            Web
 build-type:          Simple
 -- extra-source-files:
@@ -16,6 +16,9 @@ cabal-version:       >=1.10
 executable haskell-lispy
   hs-source-dirs:      src
   main-is:             Main.hs
+  other-modules:       Core
+                     , Parser
+                     , Repl
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
   build-depends:       base
                      , conduit
@@ -39,4 +42,4 @@ test-suite haskell-lispy-test
 
 source-repository head
   type:     git
-  location: https://github.com/githubuser/haskell-lispy
+  location: https://github.com/rydgel/haskell-lispy
